.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
19:41:15 **** Build of project tp4GUI ****
make debug 
make -f Makefile.Debug
make[1] : on entre dans le répertoire « /home/etudiant/Bureau/tp4/tp4GUI »
/usr/lib/i386-linux-gnu/qt4/bin/uic ajouterjoueurdialog.ui -o ui_ajouterjoueurdialog.h
/usr/lib/i386-linux-gnu/qt4/bin/uic tp4gui.ui -o ui_tp4gui.h
g++ -c -pipe -g -Wall -W -D_REENTRANT -DQT_GUI_LIB -DQT_CORE_LIB -DQT_SHARED -I/usr/share/qt4/mkspecs/linux-g++ -I. -I/usr/include/qt4/QtCore -I/usr/include/qt4/QtGui -I/usr/include/qt4 -I../tp4Lib -Idebug -I. -o debug/ajouterjoueurdialog.o ajouterjoueurdialog.cpp
g++ -c -pipe -g -Wall -W -D_REENTRANT -DQT_GUI_LIB -DQT_CORE_LIB -DQT_SHARED -I/usr/share/qt4/mkspecs/linux-g++ -I. -I/usr/include/qt4/QtCore -I/usr/include/qt4/QtGui -I/usr/include/qt4 -I../tp4Lib -Idebug -I. -o debug/main.o main.cpp
g++ -c -pipe -g -Wall -W -D_REENTRANT -DQT_GUI_LIB -DQT_CORE_LIB -DQT_SHARED -I/usr/share/qt4/mkspecs/linux-g++ -I. -I/usr/include/qt4/QtCore -I/usr/include/qt4/QtGui -I/usr/include/qt4 -I../tp4Lib -Idebug -I. -o debug/tp4gui.o tp4gui.cpp
/usr/lib/i386-linux-gnu/qt4/bin/moc -DQT_GUI_LIB -DQT_CORE_LIB -DQT_SHARED -I/usr/share/qt4/mkspecs/linux-g++ -I. -I/usr/include/qt4/QtCore -I/usr/include/qt4/QtGui -I/usr/include/qt4 -I../tp4Lib -Idebug -I. ajouterjoueurdialog.h -o debug/moc_ajouterjoueurdialog.cpp
g++ -c -pipe -g -Wall -W -D_REENTRANT -DQT_GUI_LIB -DQT_CORE_LIB -DQT_SHARED -I/usr/share/qt4/mkspecs/linux-g++ -I. -I/usr/include/qt4/QtCore -I/usr/include/qt4/QtGui -I/usr/include/qt4 -I../tp4Lib -Idebug -I. -o debug/moc_ajouterjoueurdialog.o debug/moc_ajouterjoueurdialog.cpp
/usr/lib/i386-linux-gnu/qt4/bin/moc -DQT_GUI_LIB -DQT_CORE_LIB -DQT_SHARED -I/usr/share/qt4/mkspecs/linux-g++ -I. -I/usr/include/qt4/QtCore -I/usr/include/qt4/QtGui -I/usr/include/qt4 -I../tp4Lib -Idebug -I. tp4gui.h -o debug/moc_tp4gui.cpp
g++ -c -pipe -g -Wall -W -D_REENTRANT -DQT_GUI_LIB -DQT_CORE_LIB -DQT_SHARED -I/usr/share/qt4/mkspecs/linux-g++ -I. -I/usr/include/qt4/QtCore -I/usr/include/qt4/QtGui -I/usr/include/qt4 -I../tp4Lib -Idebug -I. -o debug/moc_tp4gui.o debug/moc_tp4gui.cpp
g++  -o tp4GUI debug/ajouterjoueurdialog.o debug/main.o debug/tp4gui.o debug/moc_ajouterjoueurdialog.o debug/moc_tp4gui.o    -L/usr/lib/i386-linux-gnu ../tp4Lib/Debug/libtp4Lib.a -lQtGui -lQtCore -lpthread 
{ test -n "" && DESTDIR="" || DESTDIR=.; } && test $(gdb --version | sed -e 's,[^0-9][^0-9]*\([0-9]\)\.\([0-9]\).*,\1\2,;q') -gt 72 && gdb --nx --batch --quiet -ex 'set confirm off' -ex "save gdb-index $DESTDIR" -ex quit 'tp4GUI' && test -f tp4GUI.gdb-index && objcopy --add-section '.gdb_index=tp4GUI.gdb-index' --set-section-flags '.gdb_index=readonly' 'tp4GUI' 'tp4GUI' && rm -f tp4GUI.gdb-index || true
make[1] : on quitte le répertoire « /home/etudiant/Bureau/tp4/tp4GUI »
19:41:52 **** Incremental Build of project tp4GUI ****
make debug 
make -f Makefile.Debug
make[1] : on entre dans le répertoire « /home/etudiant/Bureau/tp4/tp4GUI »
g++ -c -pipe -g -Wall -W -D_REENTRANT -DQT_GUI_LIB -DQT_CORE_LIB -DQT_SHARED -I/usr/share/qt4/mkspecs/linux-g++ -I. -I/usr/include/qt4/QtCore -I/usr/include/qt4/QtGui -I/usr/include/qt4 -I../tp4Lib -Idebug -I. -o debug/tp4gui.o tp4gui.cpp
tp4gui.cpp: In constructor ‘tp4GUI::tp4GUI(QWidget*)’:
tp4gui.cpp:15:1: error: expected ‘;’ before ‘}’ token
 }
 ^
Makefile.Debug:189 : la recette pour la cible « debug/tp4gui.o » a échouée
make[1]: *** [debug/tp4gui.o] Erreur 1
make[1] : on quitte le répertoire « /home/etudiant/Bureau/tp4/tp4GUI »
Makefile:50 : la recette pour la cible « debug » a échouée
make: *** [debug] Erreur 2
19:41:52 **** Incremental Build of configuration Debug for project tp4Lib ****
make all 
make: rien à faire pour « all ».
19:42:00 **** Incremental Build of project tp4GUI ****
make debug 
make -f Makefile.Debug
make[1] : on entre dans le répertoire « /home/etudiant/Bureau/tp4/tp4GUI »
g++ -c -pipe -g -Wall -W -D_REENTRANT -DQT_GUI_LIB -DQT_CORE_LIB -DQT_SHARED -I/usr/share/qt4/mkspecs/linux-g++ -I. -I/usr/include/qt4/QtCore -I/usr/include/qt4/QtGui -I/usr/include/qt4 -I../tp4Lib -Idebug -I. -o debug/tp4gui.o tp4gui.cpp
g++  -o tp4GUI debug/ajouterjoueurdialog.o debug/main.o debug/tp4gui.o debug/moc_ajouterjoueurdialog.o debug/moc_tp4gui.o    -L/usr/lib/i386-linux-gnu ../tp4Lib/Debug/libtp4Lib.a -lQtGui -lQtCore -lpthread 
{ test -n "" && DESTDIR="" || DESTDIR=.; } && test $(gdb --version | sed -e 's,[^0-9][^0-9]*\([0-9]\)\.\([0-9]\).*,\1\2,;q') -gt 72 && gdb --nx --batch --quiet -ex 'set confirm off' -ex "save gdb-index $DESTDIR" -ex quit 'tp4GUI' && test -f tp4GUI.gdb-index && objcopy --add-section '.gdb_index=tp4GUI.gdb-index' --set-section-flags '.gdb_index=readonly' 'tp4GUI' 'tp4GUI' && rm -f tp4GUI.gdb-index || true
make[1] : on quitte le répertoire « /home/etudiant/Bureau/tp4/tp4GUI »
19:42:01 **** Incremental Build of configuration Debug for project tp4Lib ****
make all 
make: rien à faire pour « all ».
19:42:44 **** Incremental Build of project tp4GUI ****
make debug 
make -f Makefile.Debug
make[1] : on entre dans le répertoire « /home/etudiant/Bureau/tp4/tp4GUI »
g++ -c -pipe -g -Wall -W -D_REENTRANT -DQT_GUI_LIB -DQT_CORE_LIB -DQT_SHARED -I/usr/share/qt4/mkspecs/linux-g++ -I. -I/usr/include/qt4/QtCore -I/usr/include/qt4/QtGui -I/usr/include/qt4 -I../tp4Lib -Idebug -I. -o debug/tp4gui.o tp4gui.cpp
g++  -o tp4GUI debug/ajouterjoueurdialog.o debug/main.o debug/tp4gui.o debug/moc_ajouterjoueurdialog.o debug/moc_tp4gui.o    -L/usr/lib/i386-linux-gnu ../tp4Lib/Debug/libtp4Lib.a -lQtGui -lQtCore -lpthread 
{ test -n "" && DESTDIR="" || DESTDIR=.; } && test $(gdb --version | sed -e 's,[^0-9][^0-9]*\([0-9]\)\.\([0-9]\).*,\1\2,;q') -gt 72 && gdb --nx --batch --quiet -ex 'set confirm off' -ex "save gdb-index $DESTDIR" -ex quit 'tp4GUI' && test -f tp4GUI.gdb-index && objcopy --add-section '.gdb_index=tp4GUI.gdb-index' --set-section-flags '.gdb_index=readonly' 'tp4GUI' 'tp4GUI' && rm -f tp4GUI.gdb-index || true
make[1] : on quitte le répertoire « /home/etudiant/Bureau/tp4/tp4GUI »
19:42:45 **** Incremental Build of configuration Debug for project tp4Lib ****
make all 
make: rien à faire pour « all ».
19:43:40 **** Incremental Build of project tp4GUI ****
make debug 
make -f Makefile.Debug
make[1] : on entre dans le répertoire « /home/etudiant/Bureau/tp4/tp4GUI »
g++ -c -pipe -g -Wall -W -D_REENTRANT -DQT_GUI_LIB -DQT_CORE_LIB -DQT_SHARED -I/usr/share/qt4/mkspecs/linux-g++ -I. -I/usr/include/qt4/QtCore -I/usr/include/qt4/QtGui -I/usr/include/qt4 -I../tp4Lib -Idebug -I. -o debug/tp4gui.o tp4gui.cpp
g++  -o tp4GUI debug/ajouterjoueurdialog.o debug/main.o debug/tp4gui.o debug/moc_ajouterjoueurdialog.o debug/moc_tp4gui.o    -L/usr/lib/i386-linux-gnu ../tp4Lib/Debug/libtp4Lib.a -lQtGui -lQtCore -lpthread 
{ test -n "" && DESTDIR="" || DESTDIR=.; } && test $(gdb --version | sed -e 's,[^0-9][^0-9]*\([0-9]\)\.\([0-9]\).*,\1\2,;q') -gt 72 && gdb --nx --batch --quiet -ex 'set confirm off' -ex "save gdb-index $DESTDIR" -ex quit 'tp4GUI' && test -f tp4GUI.gdb-index && objcopy --add-section '.gdb_index=tp4GUI.gdb-index' --set-section-flags '.gdb_index=readonly' 'tp4GUI' 'tp4GUI' && rm -f tp4GUI.gdb-index || true
make[1] : on quitte le répertoire « /home/etudiant/Bureau/tp4/tp4GUI »
19:43:41 **** Incremental Build of configuration Debug for project tp4Lib ****
make all 
make: rien à faire pour « all ».
